<resources>
    <string name="app_name">AgriculturalEquip</string>
    <string name="add_equip">เพิ่มอุปกรณ์</string>
    <string name="btn_list_equip">รายชื่ออุปกรณ์</string>
    <string name="btn_delete_equip">ลบอุปกรณ์</string>
    <string name="btn_buy">ซื้อ</string>
    <string name="btn_menu_estimate">ประเมิณราคา</string>
    <string name="btn_menu_manage_equipment">จัดการอุปกรณ์</string>
    <string name="btn_history">ดูประวัติการซื้อ</string>

    <string name="btn_estimate">ประเมิณ</string>
    <string name="btn_list_estimate">ประวัติการซื้อ</string>

    <string name="hint_equip_name">ชื่อรุ่น</string>
    <string name="hint_equip_price">ราคาเครื่อง</string>
    <string name="hint_name_info">ใส่ชื่อ-นามสกุล</string>
    <string name="hint_identification_info">ใส่รหัสบัตรประชาชน</string>
    <string name="hint_purchase_price">จำนวนเงิน</string>

    <string name="txt_history">ประวัติการซื้อ</string>

    <string name="starter">จานกระตุก</string>
    <string name="fuel_tank">ถังน้ำมัน</string>
    <string name="air_filter">หม้อกรองอากาศ</string>
    <string name="carburetor">คาร์บูเรเตอร์</string>
    <string name="cylinder">เสื้อสูบ</string>
    <string name="ball_valve_switch_oil">ก๊อกน้ำมัน</string>
    <string name="muffler">ท่อไอเสีย</string>
    <string name="switch_on_off">สวิตปิด เปิด</string>
    <string name="coil">คอยล์</string>
    <string name="fuel_tank_cap">ฝาถังน้ำมัน</string>
    <string name="oil_tank_cap">ฝาถังน้ำมันเครื่อง</string>
    <string name="spark_plug">ปลั๊กหัวเทียน</string>
    <string name="control_switch">มือเร่ง</string>
    <string name="brush_cutter_blade">ใบมีด</string>
    <string name="gear_diver">คอตัดหญ้า</string>
    <string name="main_pipe">กระบอกหาง</string>
    <string name="shaft">แกนเพลา</string>
    <string name="air_chamber">หม้อลม</string>
    <string name="adjust_set">ตัวตั้งโปโล</string>
    <string name="discharge_metal">ท่อนดูด</string>
    <string name="suction_metal">ท่อนส่ง</string>
    <string name="piston_set">ลูกสูบ</string>
    <string name="starter_rope_reel">มู่เลย์</string>
    <string name="pressure_gauge">เกย์วัดความดัน</string>
    <string name="paint">ทำสี</string>

    <string name="hint_delete_info">ใส่ชื่ออุปกรณ์</string>

    <string-array name="planets_array">
        <item>กรุณาเลือกอุปกรณ์</item>
        <item>G200</item>
        <item>GX35</item>
        <item>T200</item>
        <item>TM31</item>
        <item>GX160</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
