<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.blackclover.agriculturalequip.EstinateActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_list_equip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp" />

            <CheckBox
                android:id="@+id/cbStarter"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/starter" />

            <CheckBox
                android:id="@+id/cbFuelTank"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fuel_tank" />

            <CheckBox
                android:id="@+id/cbAirFilter"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/air_filter" />

            <CheckBox
                android:id="@+id/cbCarburetor"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carburetor" />

            <CheckBox
                android:id="@+id/cbCylinder"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cylinder" />

            <CheckBox
                android:id="@+id/cbMuffler"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/muffler" />

            <CheckBox
                android:id="@+id/cbSwitchOnOff"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_on_off" />

            <CheckBox
                android:id="@+id/cbCoil"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coil" />

            <CheckBox
                android:id="@+id/cbFuelTankCap"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fuel_tank_cap" />

            <CheckBox
                android:id="@+id/cbOilTankCap"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oil_tank_cap" />

            <CheckBox
                android:id="@+id/cbSparkPlug"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spark_plug" />

            <CheckBox
                android:id="@+id/cbControlSwitch"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/control_switch" />

            <CheckBox
                android:id="@+id/cbBrushCutterBlade"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brush_cutter_blade" />

            <CheckBox
                android:id="@+id/cbGearDiver"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gear_diver" />

            <CheckBox
                android:id="@+id/cbMainPipe"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_pipe" />

            <CheckBox
                android:id="@+id/cbShaft"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shaft" />

            <CheckBox
                android:id="@+id/cbAirChamber"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/air_chamber" />

            <CheckBox
                android:id="@+id/cbAdjustSet"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adjust_set" />

            <CheckBox
                android:id="@+id/cbDischargeMetal"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discharge_metal" />

            <CheckBox
                android:id="@+id/cbSuctionMetal"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suction_metal" />

            <CheckBox
                android:id="@+id/cbPistonSet"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/piston_set" />

            <CheckBox
                android:id="@+id/cbRopeReel"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/starter_rope_reel" />

            <CheckBox
                android:id="@+id/cbPressureGauge"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pressure_gauge" />

            <!--24 checkbox.-->
            <CheckBox
                android:id="@+id/cbPaint"
                android:onClick="onCheckboxClicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paint" />

            <EditText
                android:id="@+id/edt_name_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_name_info"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edt_tel_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_identification_info"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edt_purchase_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_purchase_price"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnPurchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/btn_buy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
